# lib_den_bot

./: connection_config.py  pyproject.toml
lib_den_bot/: BD_main.py  sesion.py  tortoise_main.py
lib_den_bot/program/: database.py  user.py
tests/: train.py
